--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
-    <style media="screen">
-
-    </style>
+    <title>PureWow Form Editor</title>
+    <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
     <noscript>
@@ -18,5 +16,6 @@
     </noscript>
     <div id="root"></div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
