--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>PureWow Form Editor</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="../src/stylesheets/style.css">
   </head>
   <body>
     <noscript>
