--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" sizes="16x16" type="image/png" href="https://purewow-staticazcdn.azureedge.net/v_2013/images/favicon-new.png">
+    <link rel="shortcut icon" sizes="32x32" type="image/png" href="https://purewow-staticazcdn.azureedge.net/v_2013/images/favicon-new-large.png">
     <title>PureWow Form Editor</title>
   </head>
   <body>
