--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <img id="signature" src="Signature.png" >
     <div id="root"></div>
-
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
